Spinner can change rotation or stop

--- a/src/Main/Main.scss
+++ b/src/Main/Main.scss
@@ -7,4 +7,26 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
+  button {
+    cursor: pointer;
+    border-radius: 20px;
+  }
+
+  .Spinner-row {
+    display: flex;
+    flex-direction: row;
+    button {
+      width: 100px;
+    }
+
+    .Spinner-col {
+      display: flex;
+      flex-direction: column;
+      button {
+        width: 100%;
+        height: 100px;
+      }
+    }
+  }
 }
